--- a/source/kontakt.html
+++ b/source/kontakt.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="no-js" lang="en">
+<html class="no-js" lang="de">
 
 <head>
 
@@ -12,126 +12,89 @@
     <link rel="stylesheet" href="/css/styles.css">
     <div id="fb-root">
     </div>
-    <script>
-        (function (d, s, id) {
-            var js, fjs = d.getElementsByTagName(s)[0];
-            if (d.getElementById(id)) return;
-            js = d.createElement(s);
-            js.id = id;
-            js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.0';
-            fjs.parentNode.insertBefore(js, fjs);
-        }(document, 'script', 'facebook-jssdk'));
-    </script>
 
 </head>
 
 <body>
-    <!-- <div id="fb-root"></div>
-    <script>
-        (function (d, s, id) {
-            var js, fjs = d.getElementsByTagName(s)[0];
-            if (d.getElementById(id)) return;
-            js = d.createElement(s);
-            js.id = id;
-            js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.0';
-            fjs.parentNode.insertBefore(js, fjs);
-        }(document, 'script', 'facebook-jssdk'));
-    </script>
--->
     <nav class="navbar sticky-top navbar-light navbar-expand-md bg-primary">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <b>FLinte</b>
+                <img src="/source/img/will make one" height="30" class="d-inline-block align-self-center" alt>
+                <b>FLinte</b></img>
             </a>
 
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navStuff">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navStuff" aria-controls="navStuff" aria-expanded="false"
+                aria-label="Toggle-navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
-            <div class="collapse navbar-collapse align-left" id="navStuff">
+            <div class="collapse navbar-collapse justify-content-end" id="navStuff">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Menu1</a>
+                        <a class="nav-link" href="/home.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Menu2</a>
+                        <a class="nav-link" href="/info.html">Über uns</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Menu3</a>
+                        <a class="nav-link" href="/kontakt.html">Kontakt</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Menu4</a>
                     </li>
+                </ul>
+                <ul class="navbar-nav">
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
                             aria-expanded="false">
                             Sprache
                         </a>
-                        <div class="dropdown-menu bg-transparent outline-none border-0 p-0" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item bg-transparent btn-group-vertical">
-                                <button type="button" class="btn btn-secondary" href="#">DE</button>
-
-                                <button type="button" class="btn btn-secondary" href="#">EN</button>
-
-
-                                <button type="button" class="btn btn-secondary" href="#">FR</button>
-                            </a>
+                        <div class="dropdown-menu bg-secondary outline-none border-0 p-0" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item bg-dark" href="#">Deutsch</a>
+                            <a class="dropdown-item bg-success" href="#">English</a>
+                            <a class="dropdown-item bg-light" href="#">Français</a>
                         </div>
                     </li>
                 </ul>
             </div>
-            <!--   <div class="nav-item dropdown">
-                    <div class="btn-group-vertical" role="group" aria-label="Language choice">
-                        <button type="button" class="btn btn-primary">DE</button>
-                        <button type="button" class="btn btn-primary">EN</button>
-                        <button type="button" class="btn btn-primary">FR</button>
-                    </div> -->
         </div>
     </nav>
 
-    <div class="jumbotron p-3 p-md-5 text-white bg-dark">
-        <div class="col-md-6 px-0">
-            <h1 class="display-4 font-italic">Wir nennen uns um!</h1>
-            <p class="lead my-3">Der jetztige Name existier seit den 70er Jahren. Es ist Zeit für was neues, es is Zeit für FLinte!</p>
-            <p class="lead mb-0">
-                <a href="#" class="text-white font-weight-bold">maybe link the fb event</a>
-            </p>
-        </div>
-    </div>
-    <!--  <div class="jumbotron-fluid bg-transparent">
-        <img src="img/img432.jpg" class="d-block img-fluid" alt="responsiveIMG">
-       <h1 class="display-2">words</h1>
-                    <p class="lead">Wir versuchen verschiedene Lebensrealitäten zu verstehen und entwickeln daraus einen respektvollen Umgang
-                        miteinander!
-                    </p>
-                    <p class="lead">
-                        <a class="btn btn-primary btn-lg align-self-center" href="#" role="button">Learn more</a>
-                    </p> 
-    </div>-->
+    <!-- <h1 class="display-4 font-italic">Wir nennen uns um!</h1> -->
+    <!-- <p class="lead my-3">Der jetztige Name existier seit den 70er Jahren. Es ist Zeit für was neues, es is Zeit für FLinte!</p> -->
+    <!-- <p class="lead mb-0"> -->
 
     <div class="container">
-        <div class="row" id="head">
-            <div class="col">
-                <div class="header">
-                    <h1>Du willst mit uns Reden? Hier bist du richtig.
-                    </h1>
-                </div>
+        <div class="row pt-5" id="head">
+            <div class="col-lg-8 col-xl-9">
+                <header class="header">
+                    <h1 class="display-4 d-none d-md-block">Template large</h1>
+                    <h4 class="d-md-none">Template different</h4>
+                </header>
             </div>
         </div>
-        <div class="row" id="body">
-            <div class="col">
+        <div class="row border-info" id="body">
+            <div class="col-lg-8 col-xl-9" role="main">
+                <span class="text-secondary">main content side</span>
+            </div>
+            <div class="col-lg-4 col-xl-3 d-none d-lg-block align-self-start" role="side">
+                <span class="text-primary">words and stuff on the side</span>
+            </div>
+        </div>
+    </div>
 
-            </div>
+    </div>
+    <footer class="footer">
+        <div class="container">
+            <span class="text-muted">footer stuffs, like maybe an impressum or whatnot
+            </span>
         </div>
-        <div class="row align-content-center" id="footer">
-            <div class="col">
-                footer stuffs
-            </div>
-        </div>
+    </footer>
 
-        <script src="/js/jquery.min.js"></script>
-        <script src="/js/popper.min.js"></script>
-        <script src="js/bootstrap.min.js"></script>
+    <!-- Scripts -->
+    <script src="/js/jquery.min.js"></script>
+    <script src="/js/popper.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 </body>
 
 </html>
