--- a/source/template.html
+++ b/source/template.html
@@ -10,8 +10,6 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Archivo|Roboto&amp;subset=latin-ext">
     <link rel="stylesheet" href="/css/bootstrap.css">
     <link rel="stylesheet" href="/css/styles.css">
-    <div id="fb-root">
-    </div>
 
 </head>
 
@@ -58,14 +56,14 @@
                 </ul>
             </div>
         </div>
-        
-    </nav>
-<img src="/img/img432.jpg" class="img-fluid d-none d-md-block" style="max-height: 150px; width: 100%" alt="responsive image">
-<div class="jumbotron-fluid"    
-<!-- <h1 class="display-4 font-italic">Wir nennen uns um!</h1> -->
-    <!-- <p class="lead my-3">Der jetztige Name existier seit den 70er Jahren. Es ist Zeit für was neues, es is Zeit für FLinte!</p> -->
-    <!-- <p class="lead mb-0"> -->
 
+    </nav>
+    <img src="/img/img432.jpg" class="img-fluid d-none d-md-block" style="max-height: 150px; width: 100%" alt="responsive image">
+    <!-- <div class="jumbotron-fluid">
+        <h1 class="display-4 font-italic">Wir nennen uns um!</h1>
+        <p class="lead my-3">Der jetztige Name existier seit den 70er Jahren. Es ist Zeit für was neues, es is Zeit für FLinte!</p>
+        <p class="lead mb-0">
+</div> -->
     <div class="container">
         <div class="row pt-5" id="head">
             <div class="col-lg-8 col-xl-9">
@@ -79,8 +77,18 @@
             <div class="col-lg-8 col-xl-9" role="main">
                 <span class="text-secondary">main content side</span>
             </div>
-            <div class="col-lg-4 col-xl-3 d-none d-lg-block align-self-start" role="side">
-                <span class="text-primary">words and stuff on the side</span>
+            <div class="col-lg-4 col-xl-3 d-none d-lg-block align-self-start small text-right" role="side">
+                <span class="text-right">
+                    <p class="lead">F*c_Frauencafé Wien </p>
+                    <p>Lange Gasse 11 1080 Wien</p>
+                    <p>
+                        <strong>Offnungszeiten</strong>
+                    </p>
+                    <p>Do & Fr: 19-24 Uhr Frauen*, Lesben*, Trans* und Intersex* Personen welcome! Rauchfrei 1. und 3. Fr, 2.
+                        und 4. Do des Monats Rauchen 2. und 4. Fr, 1. und 3. Do des Monats Barrierearmer Zugang ist über
+                        eine Schräge möglich. Es gibt kein Rolli-WC. (ca. 200m vom FC entfernt gibt es eines, das benützt
+                        werden kann.)</p>
+                </span>
             </div>
         </div>
     </div>
