--- a/source/index.html
+++ b/source/index.html
@@ -147,28 +147,42 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4 col-xl-3 d-none d-lg-block align-self-start" role="side">
+            <div class="col-lg-4 col-xl-3 d-none d-lg-block" role="side">
+
                 <div class="fb-page" data-href="https://www.facebook.com/fc.feminista/" data-tabs="timeline, events" data-small-header="true"
                     data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false">
                     <blockquote cite="https://www.facebook.com/fc.feminista/" class="fb-xfbml-parse-ignore">
                         <a href="https://www.facebook.com/fc.feminista/">Fc Feminista</a>
                     </blockquote>
                 </div>
+
+                <span class="text-right ">
+                    <p class="lead text-dark">F*c_Frauencafé Wien </p>
+                    <p>Lange Gasse 11 1080 Wien</p>
+                    <p>
+                        <strong>Offnungszeiten</strong>
+                    </p>
+                    <p>Do & Fr: 19-24 Uhr Frauen*, Lesben*, Trans* und Intersex* Personen welcome! Rauchfrei 1. und 3. Fr, 2.
+                        und 4. Do des Monats Rauchen 2. und 4. Fr, 1. und 3. Do des Monats Barrierearmer Zugang ist über
+                        eine Schräge möglich. Es gibt kein Rolli-WC. (ca. 200m vom FC entfernt gibt es eines, das benützt
+                        werden kann.)</p>
+                    </span>
+
+
             </div>
-        </div>
 
-    </div>
-    <footer class="footer">
-        <div class="container">
-            <span class="text-muted">footer stuffs, like maybe an impressum or whatnot
-            </span>
         </div>
-    </footer>
+        <footer class="footer">
+            <div class="container">
+                <span class="text-muted">footer stuffs, like maybe an impressum or whatnot
+                </span>
+            </div>
+        </footer>
 
-    <!-- Scripts -->
-    <script src="/js/jquery.min.js"></script>
-    <script src="/js/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+        <!-- Scripts -->
+        <script src="/js/jquery.min.js"></script>
+        <script src="/js/popper.min.js"></script>
+        <script src="js/bootstrap.min.js"></script>
 </body>
 
 </html>
