layout ironed out -ish

--- a/source/template.html
+++ b/source/template.html
@@ -4,10 +4,11 @@
 <head>
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Flinte</title>
+    <title>FLinte</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Archivo|Roboto&amp;subset=latin-ext">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="/css/bootstrap.css">
     <link rel="stylesheet" href="/css/styles.css">
 
@@ -17,8 +18,7 @@
     <nav class="navbar sticky-top navbar-light navbar-expand-md bg-primary">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img src="/source/img/will make one" height="30" class="d-inline-block align-self-center" alt>
-                <b>FLinte</b>
+                <img src="img/logo.png" height="" class="d-inline-block align-self-center" alt="FLinte">
             </a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navStuff" aria-controls="navStuff" aria-expanded="false"
@@ -29,16 +29,16 @@
             <div class="collapse navbar-collapse justify-content-end" id="navStuff">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="/home.html">Home</a>
+                        <a class="nav-link" href="/index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/info.html">Über uns</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/kontakt.html">Kontakt</a>
+                        <a class="nav-link" href="/links.html">Nutzvolles</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Menu4</a>
+                        <a class="nav-link" href="/kontakt.html">Kontakt</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav">
@@ -59,13 +59,16 @@
 
     </nav>
     <img src="/img/img432.jpg" class="img-fluid d-none d-md-block" style="max-height: 150px; width: 100%" alt="responsive image">
-    <!-- <div class="jumbotron-fluid">
-        <h1 class="display-4 font-italic">Wir nennen uns um!</h1>
-        <p class="lead my-3">Der jetztige Name existier seit den 70er Jahren. Es ist Zeit für was neues, es is Zeit für FLinte!</p>
-        <p class="lead mb-0">
-</div> -->
+    <!-- <div class="jumbotron-fluid"> -->
+    <div class="jumbotron-fluid bg-success">
+        <div class="container py-3">
+            <h1 class="display-4 font-italic">Wir nennen uns um!</h1>
+            <p class="lead my-3">Der jetztige Name existier seit den 70er Jahren. Es ist Zeit für was neues, es is Zeit für FLinte!</p>
+            <a href="link to fb" class="btn btn-dark">Hier gehts zum Facebook Event</a>
+        </div>
+    </div>
     <div class="container">
-        <div class="row pt-5" id="head">
+        <div class="row pt-3" id="head">
             <div class="col-lg-8 col-xl-9">
                 <header class="header">
                     <h1 class="display-4 d-none d-md-block">Template large</h1>
@@ -74,21 +77,31 @@
             </div>
         </div>
         <div class="row border-info" id="body">
-            <div class="col-lg-8 col-xl-9" role="main">
-                <span class="text-secondary">main content side</span>
+            <div class="col-md-8 col-xl-9" role="main">
+                <heading class="text-">main content side</span>
             </div>
-            <div class="col-lg-4 col-xl-3 d-none d-lg-block align-self-start small text-right" role="side">
-                <span class="text-right">
-                    <p class="lead">F*c_Frauencafé Wien </p>
-                    <p>Lange Gasse 11 1080 Wien</p>
+            <div class="col-md-4 col-xl-3 d-none d-md-block align-self-start small            text-right" role="side">
+                <a class="text-right">
+                    <p class="lead">FLinté Wien </p>
+                    <address>Lange Gasse 11 1080 Wien</address>
                     <p>
-                        <strong>Offnungszeiten</strong>
+                        <strong>Öffnungszeiten</strong>
                     </p>
-                    <p>Do & Fr: 19-24 Uhr Frauen*, Lesben*, Trans* und Intersex* Personen welcome! Rauchfrei 1. und 3. Fr, 2.
-                        und 4. Do des Monats Rauchen 2. und 4. Fr, 1. und 3. Do des Monats Barrierearmer Zugang ist über
-                        eine Schräge möglich. Es gibt kein Rolli-WC. (ca. 200m vom FC entfernt gibt es eines, das benützt
-                        werden kann.)</p>
-                </span>
+                    <p>Do & Fr: 19-24 Uhr</p>
+                    <p>Frauen*, Lesben*, Trans* und Intersex* Personen welcome!
+                        <br>
+                        <br>
+                        <i class="material-icons small" alt="Rauchfrei">smoke_free</i> 1. und 3. Fr, 2. und 4. Do des Monats
+                        <br>
+                        <i class="material-icons small" alt="Rauchen">smoking_rooms</i> 2. und 4. Fr, 1. und 3. Do des Monats
+                        <br>
+                    </p>
+                    <p>
+                        <i class="material-icons md-18">accessible</i>Barrierearmer Zugang ist über eine Schräge möglich.
+                        <br>Es gibt kein Rolli-WC. (ca. 200m vom FC entfernt gibt es eines, das benützt werden kann.)
+                        <br>
+                    </p>
+                </a>
             </div>
         </div>
     </div>
