--- a/source/index.html
+++ b/source/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Archivo|Roboto&amp;subset=latin-ext">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="/css/bootstrap.css">
     <link rel="stylesheet" href="/css/styles.css">
     <div id="fb-root">
@@ -42,16 +43,16 @@
             <div class="collapse navbar-collapse justify-content-end" id="navStuff">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="/home.html">Home</a>
+                        <a class="nav-link" href="/index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/info.html">Über uns</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/kontakt.html">Kontakt</a>
+                        <a class="nav-link" href="/links.html">Nutzvolles</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Menu4</a>
+                        <a class="nav-link" href="/kontakt.html">Kontakt</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav">
@@ -76,113 +77,108 @@
     <!-- <p class="lead mb-0"> -->
 
     <div class="container">
-        <div class="row" id="head">
+        <div class="row pt-3" id="head">
             <div class="col-lg-8 col-xl-9">
                 <header class="header">
-                    <h1 class="display-4 d-none d-lg-block">willkommen large</h1>
-                    <h4 class="d-lg-none">willkommen different</h4>
+                    <h1 class="display-4 d-none d-lg-block">Willkommen</h1>
+                    <h4 class="d-lg-none">Willkommen</h4>
                 </header>
             </div>
         </div>
         <div class="row" id="body">
             <div class="col-lg-8 col-xl-9" role="main">
-                <ul class="nav nav-tabs" id="politik" role="tablist">
-                    <li class="nav-item">
-                        <a class="nav-link active" id="pol1-tab" data-toggle="tab" href="#pol1" role="tab" aria-controls="pol1" aria-selected="true">
-                            <h5>(F*L*I*T*) Raum</h5>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" id="pol2-tab" data-toggle="tab" href="#pol2" role="tab" aria-controls="pol2" aria-selected="false">
-                            <h5>gegen Diskriminierungen</h5>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" id="pol3-tab" data-toggle="tab" href="#pol3" role="tab" aria-controls="pol3" aria-selected="false">
-                            <h5>ohne Boxen</h5>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" id="pol4-tab" data-toggle="tab" href="#pol4" role="tab" aria-controls="pol4" aria-selected="false">
-                            <h5>mit der Türpolitik...</h5>
-                        </a>
-                    </li>
-                </ul>
-                <div class="tab-content" id="myTabContent">
-                    <div class="tab-pane fade show active" id="pol1" role="tabpanel" aria-labelledby="pol1-tab">
-                        <p class="card-text">Alle, die sich in der Beschreibung wiederfinden sind hier herzlich willkommen! F*L*I*T* leben alltäglich
-                            damit, diskriminiert zu werden. Diese gesellschaftlichen Verhältnisse wollen wir kritisieren.
-                            Es ist für uns eine politische Entscheidung Cis-Männer nicht ins f*c einzuladen. Cis-Männer sind
-                            Männer, die sich nicht als trans* verstehen. Wenn du dich als Cis-Mann identifizierst, verlasse
-                            den Raum bitte unaufgefordert!</p>
+                <div class="card-group">
+                    <div class="card text-dark bg-transparent border-0" id="card-1">
+                        <div class="card-header bg-success text-center" id="top-1">
+
+                            <button class="btn btn-link mb-0 text-dark" data-toggle="collapse" data-target="#politik-1" aria-expanded="true" aria-controls="collapseOne">
+                                <h5>Der Raum
+                                    <i class="material-icons md-18 pl-3 align-self-end">keyboard_arrow_down</i>
+                                </h5>
+                            </button>
+
+                        </div>
+                        <div id="politik-1" class="collapse show" aria-labelledby="top-1" data-parent="accordion">
+                            <div class="card-body bg-transparent">
+                                Alle, die sich in der Beschreibung wiederfinden sind hier herzlich willkommen! F*L*I*T* leben alltäglich damit, diskriminiert
+                                zu werden. Diese gesellschaftlichen Verhältnisse wollen wir kritisieren. Es ist für uns eine
+                                politische Entscheidung Cis-Männer nicht ins f*c einzuladen. Cis-Männer sind Männer, die
+                                sich nicht als trans* verstehen. Wenn du dich als Cis-Mann identifizierst, verlasse den Raum
+                                bitte unaufgefordert!
+                            </div>
+                        </div>
+                        <div class="card-body">
+
+                        </div>
                     </div>
-                    <div class="tab-pane fade" id="pol2" role="tabpanel" aria-labelledby="pol2-tab">
-                        <p class="card-text">F*L*I*T* Personen werden wegen ihres genders_Geschlechts oder ihrer Sexualität im Alltag diskriminiert.
-                            F*L*I*T* erfahren Benachteiligungen, Grenzüberschreitungen, Gewalt und Vorurteile. Auch in F*L*I*T*-Räumen
-                            wie dem f*c können wir diese Diskriminierungen leider nicht alle vor der Tür lassen. Trotzdem
-                            möchten wir in diesem Raum versuchen etwas anders zu machen. Wir wollen Normen von gender_Geschlecht
-                            und Sexualität überdenken und Unterdrückungsformen wie (Hetero-)Sexismus, Homophobie, Transphobie,
-                            Biphobie etc. kritisieren. Alle Menschen haben nicht nur eine gesellschaftliche Position. Wir
-                            haben zu unterschiedlichen Zeitpunkten und Orten unterschiedliche (Macht-)positionen. Ich kann
-                            etwa wegen meines genders_Geschlechts Gewalt erfahren und gleichzeitig von rassistischen Strukturen
-                            profitieren und_oder rassistisch handeln. Deshalb ist es notwendig rassistische Gewalt (auch)
-                            im f*c zu benennen und dagegen zu handeln. Das gilt auch für andere Diskriminierungsformen.</p>
-                    </div>
-                    <div class="tab-pane fade" id="pol3" role="tabpanel" aria-labelledby="pol3-tab">
-                        <p class="card-text">Die Bezeichnungen Lesbe* Inter* Trans* und Frau* sind für uns keine Boxen, die immer mit dem gleichen
-                            Inhalt gefüllt sein müssen. Denn wir füllen sie alle auf unsere eigene Art und können sie auch
-                            mal sprengen. Bei den Begriffen und der Einladungspolitik geht es uns um die Anerkennung der
-                            Eigendefinitionen von Menschen. Viele F*L*I*T*s müssen sich alltäglich gegen Zuschreibungen wehren,
-                            davon wollen wir im f*c möglichst wenig haben. Das f*c wird oft auch als Frauen*café bezeichnet.
-                            Vielleicht kommt es deshalb immer wieder zur Annahme, dass alle Personen im Raum als ‘Frauen’
-                            bezeichnet werden können. Das ist nicht so! Menschen verwenden unterschiedliche Selbstbezeichnungen.
-                            Personen zu fragen, ob sie als “er”, “sie” oder mit einem anderen Pronomen angesprochen werden
-                            wollen, ist cool und respektvoll. Fremdzuschreibungen können sehr verletzend sein.
-                        </p>
-                    </div>
-                    <div class="tab-pane fade" id="pol4" role="tabpanel" aria-labelledby="pol4-tab">
-                        <p class="card-text">
-                            {}
-                        </p>
+
+                    <div class="card text-dark bg-transparent border-0" id="card-2">
+                        <div class="card-header bg-success text-center" id="top-2">
+
+                            <button class="btn btn-link mb-0 text-dark" data-toggle="collapse" data-target="#politik-2" aria-expanded="true" aria-controls="politik-2">
+                                <h5>Noch was
+                                    <i class="material-icons md-18 pl-3">keyboard_arrow_down</i>
+                                </h5>
+                            </button>
+
+                        </div>
+                        <div id="politik-2" class="collapse" aria-labelledby="top-2" data-parent="accordion">
+                            <div class="card-body bg-transparent">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit nemo obcaecati quas necessitatibus vel, perferendis mollitia
+                                maxime molestias exercitationem asperiores ex nam commodi recusandae quidem minus quis dolorem
+                                voluptatum similique nobis eveniet consequatur facere sed corporis pariatur. Commodi, deserunt
+                                non.
+
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="col-lg-4 col-xl-3 d-none d-lg-block" role="side">
 
-                <div class="fb-page" data-href="https://www.facebook.com/fc.feminista/" data-tabs="timeline, events" data-small-header="true"
+                <div class="fb-page mb-3" data-href="https://www.facebook.com/fc.feminista/" data-tabs="timeline, events" data-small-header="true"
                     data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false">
                     <blockquote cite="https://www.facebook.com/fc.feminista/" class="fb-xfbml-parse-ignore">
                         <a href="https://www.facebook.com/fc.feminista/">Fc Feminista</a>
                     </blockquote>
                 </div>
 
-                <span class="text-right ">
-                    <p class="lead text-dark">F*c_Frauencafé Wien </p>
-                    <p>Lange Gasse 11 1080 Wien</p>
+                <a class="text-right">
+                    <p class="lead">FLinté Wien </p>
+                    <address>Lange Gasse 11 1080 Wien</address>
                     <p>
-                        <strong>Offnungszeiten</strong>
+                        <strong>Öffnungszeiten</strong>
                     </p>
-                    <p>Do & Fr: 19-24 Uhr Frauen*, Lesben*, Trans* und Intersex* Personen welcome! Rauchfrei 1. und 3. Fr, 2.
-                        und 4. Do des Monats Rauchen 2. und 4. Fr, 1. und 3. Do des Monats Barrierearmer Zugang ist über
-                        eine Schräge möglich. Es gibt kein Rolli-WC. (ca. 200m vom FC entfernt gibt es eines, das benützt
-                        werden kann.)</p>
-                    </span>
-
-
+                    <p>Do & Fr: 19-24 Uhr</p>
+                    <p>Frauen*, Lesben*, Trans* und Intersex* Personen welcome!
+                        <br>
+                        <br>
+                        <i class="material-icons small" alt="Rauchfrei">smoke_free</i> 1. und 3. Fr, 2. und 4. Do des Monats
+                        <br>
+                        <i class="material-icons small" alt="Rauchen">smoking_rooms</i> 2. und 4. Fr, 1. und 3. Do des Monats
+                        <br>
+                    </p>
+                    <p>
+                        <i class="material-icons md-18">accessible</i>Barrierearmer Zugang ist über eine Schräge möglich.
+                        <br>Es gibt kein Rolli-WC. (ca. 200m vom FC entfernt gibt es eines, das benützt werden kann.)
+                        <br>
+                    </p>
+                </a>
             </div>
-
         </div>
-        <footer class="footer">
-            <div class="container">
-                <span class="text-muted">footer stuffs, like maybe an impressum or whatnot
-                </span>
-            </div>
-        </footer>
 
-        <!-- Scripts -->
-        <script src="/js/jquery.min.js"></script>
-        <script src="/js/popper.min.js"></script>
-        <script src="js/bootstrap.min.js"></script>
+    </div>
+    <footer class="footer">
+        <div class="container">
+            <span class="text-muted">footer stuffs, like maybe an impressum or whatnot
+            </span>
+        </div>
+    </footer>
+
+    <!-- Scripts -->
+    <script src="/js/jquery.min.js"></script>
+    <script src="/js/popper.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 </body>
 
 </html>
