--- a/source/links.html
+++ b/source/links.html
@@ -69,51 +69,18 @@
     </div>
     <div class="container">
         <div class="row pt-5" id="head">
-            <div class="col-md-8 col-xl-9">
+            <div class="col-lg-8 col-xl-9">
                 <header class="header">
-                    <h1 class="display-4 d-none d-md-block">Was ist denn die FLinte?</h1>
-                    <h4 class="d-md-none">Was ist denn die FLinte?</h4>
+                    <h1 class="display-4 d-none d-md-block">Template large</h1>
+                    <h4 class="d-md-none">Template different</h4>
                 </header>
             </div>
         </div>
         <div class="row border-info" id="body">
             <div class="col-md-8 col-xl-9" role="main">
-                <p class="lead">Wir sind das/die/der ???NEUER NAME???</p>
-                <p>Das f*c (von manchen frauen*café genannt) ist ein selbstorganisierter Raum von und für trans*inter*lesben*frauen*
-                    (f*l*i*t*). Der Raum wird von einem Kollektiv organisiert. Die Bardienste werden meist von Leuten aus
-                    dem Kollektiv gemacht. Jeden Donnerstag und Freitag ab 18.00 Uhr ist das f*c geöffnet. Darüber hinaus
-                    wird der Raum von verschiedenen queer-/feministischen Gruppen genutzt. Das Kollektiv trifft sich zweimal
-                    im Monat am Plenum, um Organisatorisches und Inhaltliches zu besprechen. Jeden 1. Donnerstag im Monat
-                    um 18.00 Uhr findet das Orga-Plenum statt. Alle f*l*i*t*-personen, die im f*c mitmachen wollen, sind
-                    herzlich dazu eingeladen. Ihr könnt das f*c auch außerhalb der Baröffnungszeiten als Gruppe oder Einzelpersonen
-                    nutzen. Wenn ihr also Lust habt, euch in irgendeiner Form im f*c einzubringen, kommt einfach vorbei.
-                    Ihr könnt auch gerne vorher das Kollektiv kontaktieren (per Mail frauencafe[at]gmx.at oder an der Bar).
-                    Im f*c gibt es keinen Konsumzwang. Wer hierher kommt, muss nichts von der Bar konsumieren und kann gerne
-                    auch Mitgebrachtes trinken und essen. Für Getränke geben die Barmenschen Spendenvorschläge. Alle entscheiden
-                    selbst, ob und wieviel sie für Getränke von der Bar spenden wollen. Leider ist das f*c für Rolli_benutzer_innen
-                    nicht barrierefrei. Für die hohe Türschwelle gibt es eine Schräge, die bei Bedarf hinausgetragen wird.
-                    Neben der Eingangstür findet ihr eine Glocke. Das Klo ist leider nicht mit einem Rollstuhl zugänglich.
-                    Im nahen 25hours Hotel in der Lerchenfelderstraße, gibt es aber ein barrierefreies Klo das benutzt werden
-                    kann.
-                </p>
-                <p class="lead text-center"> wir miteinander tun wollen]</p>
-                <p>
-                    STILL NOT ♥ING RASSISMUS TRANSPHOBIE ANTISEMITISMUS ANTIROMAISMUS SEXISMUS MISOGYNIE HOMOPHOBIE ABLEISMUS KULTURALISMUS BIPHOBIE
-                    Alle, die hier sind, gestalten den Raum mit. Respektvolles Verhalten ist eine wichtige Basis für den
-                    Raum. Respektvolles Verhalten kann unterschiedlich aussehen, je nachdem was Leute erlebt haben und leben.
-                    Glaub nicht, dass du eine Person kennst, aufgrund dessen, wie sie redet, aussieht oder du sie wahrnimmst.
-                    Manchmal ist es besser, erst mal zuzuhören und_oder die Person selbst zu fragen. Die Leute vom Kollektiv
-                    sind öfters da und prägen den Raum deshalb mehr. Sie und „die hinter der Bar“ sind Ansprechpersonen.
-                    Wenn sich jemand dir gegenüber grenzüberschreitend, verletzend oder unangenehm verhält, kannst du dir
-                    Unterstützung vom Kollektiv oder den Barmenschen holen. Greif ein oder sag bescheid, wenn du mitbekommst,
-                    dass sich wer ungut verhält! Niemand ist unfehlbar. Alle greifen mal daneben. Umso mehr kommt es manchmal
-                    auf den „Tonfall“ und Umgangsstil an, mit dem du Leuten begegnest, ob ein Irrtum zur Verletzung wird.
-                    Auch Aussagen, die aus Unwissenheit oder Unsicherheit entstehen, können als Gewalt erlebt werden. Wenn
-                    sich Personen grenzüberschreitend verhalten, können diese rausgeschmissen werden. WENN ALLE SPAß HABEN,
-                    HABEN ALLE SPAß!
-                </p>
+                <heading class="text-">main content side</span>
             </div>
-            <div class="col-md-4 col-xl-3 d-none d-md-block align-self-start small text-right" role="side">
+            <div class="col-md-4 col-xl-3 d-none d-md-block align-self-start small            text-right" role="side">
                 <a class="text-right">
                     <p class="lead">FLinté Wien </p>
                     <address>Lange Gasse 11 1080 Wien</address>
