cards for politiks

--- a/source/index.html
+++ b/source/index.html
@@ -4,7 +4,7 @@
 <head>
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Flinte</title>
+    <title>F_inte</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Archivo|Roboto&amp;subset=latin-ext">
@@ -31,8 +31,7 @@
     <nav class="navbar sticky-top navbar-light navbar-expand-md bg-primary">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img src="/source/img/will make one" height="30" class="d-inline-block align-self-center" alt>
-                <b>FLinte</b>
+                <img src="img/logo.png" height="30" class="d-inline-block align-self-center" alt="F_inte">
             </a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navStuff" aria-controls="navStuff" aria-expanded="false"
@@ -73,7 +72,7 @@
     </nav>
 
     <!-- <h1 class="display-4 font-italic">Wir nennen uns um!</h1> -->
-    <!-- <p class="lead my-3">Der jetztige Name existier seit den 70er Jahren. Es ist Zeit für was neues, es is Zeit für FLinte!</p> -->
+    <!-- <p class="lead my-3">Der jetztige Name existier seit den 70er Jahren. Es ist Zeit für was neues, es is Zeit für F_inte!</p> -->
     <!-- <p class="lead mb-0"> -->
 
     <div class="container">
@@ -87,18 +86,17 @@
         </div>
         <div class="row" id="body">
             <div class="col-lg-8 col-xl-9" role="main">
-                <div class="card-group">
+                <div class="card-deck">
                     <div class="card text-dark bg-transparent border-0" id="card-1">
-                        <div class="card-header bg-success text-center" id="top-1">
+                        <div class="card-title bg-transparent text-center" id="top-1">
 
-                            <button class="btn btn-link mb-0 text-dark" data-toggle="collapse" data-target="#politik-1" aria-expanded="true" aria-controls="collapseOne">
+                            <button class="btn btn-dark mb-0 text-light" data-toggle="collapse" data-target="#politik-1" aria-expanded="true" aria-controls="politik-1">
                                 <h5>Der Raum
-                                    <i class="material-icons md-18 pl-3 align-self-end">keyboard_arrow_down</i>
                                 </h5>
                             </button>
 
                         </div>
-                        <div id="politik-1" class="collapse show" aria-labelledby="top-1" data-parent="accordion">
+                        <div id="politik-1" class="collapse" aria-labelledby="top-1" data-parent="accordion">
                             <div class="card-body bg-transparent">
                                 Alle, die sich in der Beschreibung wiederfinden sind hier herzlich willkommen! F*L*I*T* leben alltäglich damit, diskriminiert
                                 zu werden. Diese gesellschaftlichen Verhältnisse wollen wir kritisieren. Es ist für uns eine
@@ -113,25 +111,64 @@
                     </div>
 
                     <div class="card text-dark bg-transparent border-0" id="card-2">
-                        <div class="card-header bg-success text-center" id="top-2">
+                        <div class="card-title bg-transparent text-center" id="top-2">
 
-                            <button class="btn btn-link mb-0 text-dark" data-toggle="collapse" data-target="#politik-2" aria-expanded="true" aria-controls="politik-2">
-                                <h5>Noch was
-                                    <i class="material-icons md-18 pl-3">keyboard_arrow_down</i>
+                            <button class="btn btn-dark mb-0 text-light" data-toggle="collapse" data-target="#politik-2" aria-expanded="true" aria-controls="politik-2">
+                                <h5>Der Raum
                                 </h5>
                             </button>
 
                         </div>
                         <div id="politik-2" class="collapse" aria-labelledby="top-2" data-parent="accordion">
                             <div class="card-body bg-transparent">
+                                Alle, die sich in der Beschreibung wiederfinden sind hier herzlich willkommen! F*L*I*T* leben alltäglich damit, diskriminiert
+                                zu werden. Diese gesellschaftlichen Verhältnisse wollen wir kritisieren. Es ist für uns eine
+                                politische Entscheidung Cis-Männer nicht ins f*c einzuladen. Cis-Männer sind Männer, die
+                                sich nicht als trans* verstehen. Wenn du dich als Cis-Mann identifizierst, verlasse den Raum
+                                bitte unaufgefordert!
+                            </div>
+                        </div>
+                        <div class="card-body">
+
+                        </div>
+                    </div>
+
+                    <div class="card text-light bg-transparent border-0" id="card-3">
+                        <div class="card-title bg-transparent text-center" id="top-3">
+                            <button class="btn btn-dark mb-0 text-light" data-toggle="collapse" data-target="#politik-3" aria-expanded="true" aria-controls="politik-3">
+                                <h5>Noch was
+                                    <i class="material-icons md-18 pl-3">keyboard_arrow_down</i>
+                                </h5>
+                            </button>
+                        </div>
+                        <div id="politik-3" class="collapse" aria-labelledby="top-3" data-parent="accordion">
+                            <div class="card-body bg-transparent">
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit nemo obcaecati quas necessitatibus vel, perferendis mollitia
                                 maxime molestias exercitationem asperiores ex nam commodi recusandae quidem minus quis dolorem
                                 voluptatum similique nobis eveniet consequatur facere sed corporis pariatur. Commodi, deserunt
                                 non.
-
                             </div>
                         </div>
                     </div>
+
+                    <div class="car text darg bg transparent border-0 p-2" id="card-4">
+                        <div class="card-header bg-secondary text-center" id="top-4">
+
+                            <button class="btn btn-link mb-0 text-dark" data-toggle="collapse" data-target="politik-4" aria-expanded="true" aria-controls="politik-4">
+                                <h5>Noch mehr
+                                    <i class="material-icons md-18 pl-3">keyboard_arrow_down</i>
+                                </h5>
+                            </button>
+                        </div>
+                        <div id="politik-4" class="collapse" aria-labelledby="top-4" data-parent="accordion">
+                            <div class="card-body bg-transparent">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem officiis possimus veniam aut blanditiis ducimus eius expedita
+                                et repellat quis nemo ut quidem pariatur, eum nulla tenetur exercitationem praesentium molestiae
+                                temporibus omnis rerum a. Expedita necessitatibus reprehenderit deleniti minus rem.
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </div>
             <div class="col-lg-4 col-xl-3 d-none d-lg-block" role="side">
