worked the pages

--- a/source/kontakt.html
+++ b/source/kontakt.html
@@ -4,7 +4,7 @@
 <head>
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>FLinte</title>
+    <title>F_inte</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Archivo|Roboto&amp;subset=latin-ext">
@@ -18,7 +18,7 @@
     <nav class="navbar sticky-top navbar-light navbar-expand-md bg-primary">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img src="img/logo.png" height="" class="d-inline-block align-self-center" alt="FLinte">
+                <img src="img/logo.png" height="" class="d-inline-block align-self-center" alt="F_inte">
             </a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navStuff" aria-controls="navStuff" aria-expanded="false"
@@ -63,8 +63,8 @@
     <div class="jumbotron-fluid bg-success">
         <div class="container py-3">
             <h1 class="display-4 font-italic">Wir nennen uns um!</h1>
-            <p class="lead my-3">Der jetztige Name existier seit den 70er Jahren. Es ist Zeit für was neues, es is Zeit für FLinte!</p>
-<a href="https://www.facebook.com/events/244645746098818/" class="btn btn-dark">Hier gehts zum Facebook Event</a>
+            <p class="lead my-3">Der jetztige Name existier seit den 70er Jahren. Es ist Zeit für was neues, es is Zeit für F_inte!</p>
+            <a href="https://www.facebook.com/events/244645746098818/" class="btn btn-dark">Hier gehts zum Facebook Event</a>
         </div>
     </div>
 
