--- a/source/info.html
+++ b/source/info.html
@@ -4,7 +4,7 @@
 <head>
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>FLinte</title>
+    <title>F_inte</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Archivo|Roboto&amp;subset=latin-ext">
@@ -18,7 +18,7 @@
     <nav class="navbar sticky-top navbar-light navbar-expand-md bg-primary">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img src="img/logo.png" height="" class="d-inline-block align-self-center" alt="FLinte">
+                <img src="img/logo.png" height="" class="d-inline-block align-self-center" alt="F_inte">
             </a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navStuff" aria-controls="navStuff" aria-expanded="false"
@@ -63,7 +63,7 @@
     <div class="jumbotron-fluid bg-success">
         <div class="container py-3">
             <h1 class="display-4 font-italic">Wir nennen uns um!</h1>
-            <p class="lead my-3">Der jetztige Name existier seit den 70er Jahren. Es ist Zeit für was neues, es is Zeit für FLinte!</p>
+            <p class="lead my-3">Der jetztige Name existier seit den 70er Jahren. Es ist Zeit für was neues, es is Zeit für F_inte!</p>
 <a href="https://www.facebook.com/events/244645746098818/" class="btn btn-dark">Hier gehts zum Facebook Event</a>
         </div>
     </div>
@@ -71,8 +71,8 @@
         <div class="row pt-5" id="head">
             <div class="col-md-8 col-xl-9">
                 <header class="header">
-                    <h1 class="display-4 d-none d-md-block">Was ist denn die FLinte?</h1>
-                    <h4 class="d-md-none">Was ist denn die FLinte?</h4>
+                    <h1 class="display-4 d-none d-md-block">Was ist denn die F_inte?</h1>
+                    <h4 class="d-md-none">Was ist denn die F_inte?</h4>
                 </header>
             </div>
         </div>
